[viewport] Fix a bug where an overlay would show double scrollbars if <html> was chosen as the overflow element (regression introduced by v3.8.0)

--- a/src/unpoly/viewport.sass
+++ b/src/unpoly/viewport.sass
@@ -5,7 +5,9 @@ up-bounds
   outline-color: transparent !important
 
 body.up-scrollbar-away
-  overflow-y: hidden !important
+  &, html:has(>&)
+    overflow-y: hidden !important
+
   padding-right: calc(var(--up-scrollbar-width) + var(--up-original-padding-right)) !important
 
   .up-scrollbar-away
